# sup2srt

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compositionObject.cpp  compositionObject.h  entrypoint.sh  objectDefinitionSegment.h  paletteDefinitionSegment.cpp  paletteDefinitionSegment.h  paletteSegment.cpp  paletteSegment.h  pgsParser.cpp  pgsParser.h  pgsSegment.cpp  pgsSegment.h  pgsSegmentHeader.cpp  pgsSegmentHeader.h  pgsUtil.cpp  pgsUtil.h  presentationCompositionSegment.cpp  presentationCompositionSegment.h  sup2srt  sup2srt.cpp  windowDefinitionSegment.cpp  windowSegment.cpp  windowSegment.h
.github/workflows/: cmake.yml  docker-build.yml  release-assets.yml
src/: CMakeLists.txt  Makefile  mkvUtil.cpp  mkvUtil.h  srtUtil.cpp  srtUtil.h  sup2disk.cpp  sup2srt.cpp  sup2srtConfig.h.in
src/bmp/: Makefile  bitmap.cpp  bitmap.h  bitmapColorTable.cpp  bitmapColorTable.h  bitmapDIBHeader.cpp  bitmapDIBHeader.h  bitmapDIBHeaderV4.cpp  bitmapDIBHeaderV4.h  bitmapDIBHeaderV5.cpp  bitmapDIBHeaderV5.h  bitmapFileHeader.cpp  bitmapFileHeader.h  bitmapUtil.cpp  bitmapUtil.h  colorSpaceEndpoints.cpp  colorSpaceEndpoints.h
src/pgs/: CMakeLists.txt  Makefile  compositionObject.cpp  compositionObject.h  displaySegment.cpp  displaySegment.h  objectData.cpp  objectData.h  objectDefinitionSegment.cpp  objectDefinitionSegment.h  paletteDefinitionSegment.cpp  paletteDefinitionSegment.h  paletteSegment.cpp  paletteSegment.h  pgsImage.cpp  pgsImage.h  pgsParser.cpp  pgsParser.h  pgsSegment.cpp  pgsSegment.h  pgsUtil.cpp  pgsUtil.h  presentationCompositionSegment.cpp  presentationCompositionSegment.h  windowDefinitionSegment.cpp  windowDefinitionSegment.h
